--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -43,16 +43,6 @@ body.dark {
     color: var(--color-avatar-bg);
 }
 
-.sidebar-custom {
-    min-height: 100vh;
-    max-height: 100dvh;
-    width: 250px;
-    position: sticky;
-    top: 0;
-    border-right: 1px solid #e4e4e7;
-    background-color: var(--bg-sidebar-light);
-}
-
 .nav-link-custom,
 .drop,
 .dropdown-menu .dropdown-item {
@@ -63,15 +53,19 @@ body.dark {
     align-items: center;
     text-decoration: none;
     transition: background-color 0.3s;
+    position: relative;
+    justify-content: flex-start;
+    /* cuando está expandido */
+
 }
 
+.menu-btn:hover,
+.menu-btn:active,
 .nav-link-custom:hover,
 .nav-link-custom.active,
 .drop:hover,
 .drop.active,
-.dropdown-menu .dropdown-item:hover,
-.btn:hover,
-.btn.active {
+.dropdown-menu .dropdown-item:hover {
     background-color: var(--hover-bg-light);
     color: var(--text-light) !important;
 }
@@ -103,7 +97,6 @@ body.dark .dropdown-menu {
     color: var(--logo-color-light);
 }
 
-
 .logo-wrapper {
     background-color: var(--color-avatar-text);
     display: inline-flex;
@@ -121,3 +114,27 @@ body.dark .dropdown-menu {
     /* Ajusta según tu diseño */
 }
 
+.sidebar-footer {
+    position: relative;
+    margin-top: auto !important;
+    width: 100%;
+}
+.sidebar-footer .dropdown-menu {
+    position: absolute !important;
+    margin: 0 !important;
+    transform: translate(0, -57.7px) !important;
+    width: 100% !important;
+    min-width: unset !important;
+    left: 0 !important;
+}
+
+.avatar-circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    font-weight: bold;
+    flex-shrink: 0;
+}
